[gd_scene load_steps=11 format=2]

[ext_resource path="res://systems/map_system/ui_elements/map_layers/layers.gd" type="Script" id=1]
[ext_resource path="res://systems/map_system/ui_elements/map_layers/theme/default_layer_style_box.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/graphics/map/map layer/eye.svg" type="Texture" id=3]
[ext_resource path="res://assets/graphics/map/map layer/eye-off.svg" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[node name="Layers" type="Control"]
anchor_right = 0.126563
anchor_bottom = 0.0277778
rect_min_size = Vector2( 0, 30 )
rect_pivot_offset = Vector2( 141, 15 )
size_flags_horizontal = 3
theme = SubResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Visible" type="TextureButton" parent="Panel/HBoxContainer"]
modulate = Color( 0.878431, 0.878431, 0.878431, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer"]
modulate = Color( 0.878431, 0.878431, 0.878431, 1 )
margin_left = 30.0
margin_top = 3.0
margin_right = 233.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "layer name"

[connection signal="gui_input" from="." to="." method="_on_Layers_gui_input"]
[connection signal="mouse_pointer_entered" from="." to="." method="_on_Layers_mouse_pointer_entered"]
[connection signal="mouse_pointer_exited" from="." to="." method="_on_Layers_mouse_pointer_exited"]
[connection signal="pressed" from="Panel/HBoxContainer/Visible" to="." method="_on_Visible_pressed"]
